--- a/telon-gateway-app/package.json
+++ b/telon-gateway-app/package.json
@@ -16,23 +16,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.9.0",
-    "react-native": "0.61.5",
+    "react": "18.0.0",
+    "react-native": "0.69.12",
     "react-native-console-panel": "^0.1.0",
-    "react-native-device-info": "^5.5.7",
-    "react-native-replace-dialer": "https://github.com/telon-org/react-native-replace-dialer",
+    "react-native-device-info": "^10.12.0",
+    "react-native-replace-dialer": "file:../react-native-replace-dialer",
     "react-native-sip2": "https://github.com/telon-org/react-native-sip2",
     "react-native-tele": "https://github.com/telon-org/react-native-tele"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
-    "@react-native-community/eslint-config": "^0.0.5",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.5.1",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.0",
-    "react-test-renderer": "16.9.0"
+    "@babel/core": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli": "^9.3.4",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "babel-jest": "^28.1.3",
+    "eslint": "^8.19.0",
+    "jest": "^28.1.3",
+    "metro-react-native-babel-preset": "^0.73.7",
+    "react-test-renderer": "18.0.0"
   },
   "jest": {
     "preset": "react-native"
