--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: Build
 
 on:
-  workflow_dispatch :
   push:
     branches:
       - "**"
@@ -12,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
 #      - name: Setup Node.js
 #        uses: actions/setup-node@v4
@@ -34,7 +33,8 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v5
+
       #- name: Setup Java 8
       #  uses: actions/setup-java@v2
       #  with:
@@ -42,58 +42,31 @@ jobs:
       #    java-version: '8' # Требуется Java 8 для Gradle
 
       - name: Cache Node.js
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
-            path: ~/.npm
-            key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
-            restore-keys: |
-              ${{ runner.os }}-node-modules-
+          path: ~/.npm
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-modules-
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
           node-version: 12
-
 
       - name: Set up OpenJDK 8
         run: |
           sudo apt update
-          sudo apt install openjdk-8-jdk
-      #- name: Setup Java 8
-      #  uses: actions/setup-java@v4
-      #  with:
-            #distribution: 'temurin'
-            #java-version: '8'
-            #distribution: 'adoptopenjdk'
-      #- name: Setup Java 17
-      #  uses: actions/setup-java@v2
-      #  with:
-      #    distribution: 'temurin'
-      #    java-version: '17'
-
-      #- name: Setup Node.js
-      #  uses: actions/setup-node@v2
-      #  with:
-      #    node-version: 12
-      #    #node-version: 18.19.0
+          sudo apt install -y openjdk-8-jdk
 
       - name: Setup Android SDK (API Level 19)
-        uses: android-actions/setup-android@v4
+        # android-actions has v3.x releases — v4 doesn't exist, поэтому переключаемся на @v3.
+        uses: android-actions/setup-android@v3
         with:
           api-level: 19
           ndk: true
           build-tools: 25.2.5
       #    build-tools: 30.0.3
-
-
-      #- name: Install NDK (if required)
-      #  run: |
-      #    sdkmanager "ndk;21.4.7075529"
-      #    echo "ndk.dir=/usr/local/lib/android/sdk/ndk/21.4.7075529" >> android/local.properties
-      #  working-directory: telon-gateway-app        
-      #  env:
-      #    ANDROID_HOME: ${{ runner.tool_cache }}/android-sdk
-      #    PATH: $PATH:${{ runner.tool_cache }}/android-sdk/cmdline-tools/latest/bin
 
       - name: Download NDK r17b
         run: |
@@ -112,14 +85,9 @@ jobs:
           echo "NDK_HOME=$NDK_HOME"
           ls -la $NDK_HOME
 
-      - name: Navigate to Project Root
-        run: cd $GITHUB_WORKSPACE
-        working-directory: telon-gateway-app
-
       - name: Install Dependencies
         run: npm install
         working-directory: telon-gateway-app
-
 
       - name: Build Android App Bundle
         run: |
@@ -132,7 +100,6 @@ jobs:
           cd android
           chmod +x gradlew 
           ./gradlew clean
-          #!./gradlew wrapper --gradle-version 6.2.2 --distribution-type all
           ./gradlew bundleRelease -Pkeystore.password=${{ secrets.KEYSTORE_PASSWORD }}
         working-directory: telon-gateway-app
 
@@ -142,12 +109,15 @@ jobs:
     needs: build_android
 
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v5
+
       - name: Download Android App Bundle
         run: |
           mkdir -p $GITHUB_WORKSPACE/dist
-          cp $GITHUB_WORKSPACE/android/app/build/outputs/bundle/release/app-release.aab $GITHUB_WORKSPACE/dist
+          # Исправленный путь: сборка находится в telon-gateway-app/android/...
+          cp $GITHUB_WORKSPACE/telon-gateway-app/android/app/build/outputs/bundle/release/app-release.aab $GITHUB_WORKSPACE/dist
         working-directory: telon-gateway-app
-
 
       - name: Archive Bundle
         uses: actions/upload-artifact@v4
