--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,34 +12,27 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v5
-
-#      - name: Setup Node.js
-#        uses: actions/setup-node@v4
-#        with:
-#          #node-version: 20.18.1
-#          node-version: 12
-
-#      - name: Install dependencies
-#        run: npm install
-#        working-directory: telon-gateway-app
-#
-#      - name: Run tests
-#        run: npm test
+        with:
+          fetch-depth: 0
 
   build_android:
     runs-on: ubuntu-latest
-
     needs: build
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
 
-      #- name: Setup Java 8
-      #  uses: actions/setup-java@v2
-      #  with:
-      #    distribution: 'temurin'
-      #    java-version: '8' # Требуется Java 8 для Gradle
+      - name: Clone sibling libraries (react-native-tele, react-native-sip2, react-native-replace-dialer)
+        run: |
+          # Клонируем библиотеки на тот же уровень, где ожидает package.json file:../...
+          cd $GITHUB_WORKSPACE/..
+          git clone https://github.com/telon-org/react-native-tele.git || echo "react-native-tele already exists or clone failed"
+          git clone https://github.com/telon-org/react-native-sip2.git || echo "react-native-sip2 already exists or clone failed"
+          git clone https://github.com/telon-org/react-native-replace-dialer.git || echo "react-native-replace-dialer already exists or clone failed"
+        # Если репозитории приватные — замените URL на git@github.com:... и добавьте SSH ключ / PAT.
 
       - name: Cache Node.js
         uses: actions/cache@v4
@@ -49,24 +42,29 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-modules-
 
-      - name: Setup Node.js
+      - name: Setup Node.js (LTS)
         uses: actions/setup-node@v4
         with:
-          node-version: 12
+          node-version: 20
+          cache: 'npm'
+
+      - name: Verify Node & NPM versions
+        run: |
+          node -v
+          npm -v
 
       - name: Set up OpenJDK 8
         run: |
-          sudo apt update
-          sudo apt install -y openjdk-8-jdk
+          sudo apt-get update
+          sudo apt-get install -y openjdk-8-jdk
+          java -version
 
       - name: Setup Android SDK (API Level 19)
-        # android-actions has v3.x releases — v4 doesn't exist, поэтому переключаемся на @v3.
         uses: android-actions/setup-android@v3
         with:
           api-level: 19
           ndk: true
           build-tools: 25.2.5
-      #    build-tools: 30.0.3
 
       - name: Download NDK r17b
         run: |
@@ -83,29 +81,32 @@ jobs:
       - name: Verify NDK installation
         run: |
           echo "NDK_HOME=$NDK_HOME"
-          ls -la $NDK_HOME
+          ls -la $HOME/android-ndk/android-ndk-r17b || true
 
-      - name: Install Dependencies
-        run: npm install
-        working-directory: telon-gateway-app
-
-      - name: Build Android App Bundle
+      - name: Install Dependencies (telon-gateway-app)
         run: |
+          cd $GITHUB_WORKSPACE/telon-gateway-app
+          # Рекомендуется использовать npm ci для чистой установки, но если у вас lockfile mismatch — используем npm install
+          npm install --no-audit --no-fund
+        env:
+          CI: true
+
+      - name: Build Android App Bundle (React Native bundle)
+        run: |
+          cd $GITHUB_WORKSPACE/telon-gateway-app
           mkdir -p android/app/build/intermediates/assets/release/
           npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/build/intermediates/assets/release/index.android.bundle --assets-dest android/app/build/intermediates/res/merged/release
-        working-directory: telon-gateway-app
 
-      - name: Build Android Release
+      - name: Build Android Release (Gradle bundle)
         run: |
-          cd android
-          chmod +x gradlew 
+          cd $GITHUB_WORKSPACE/telon-gateway-app/android
+          chmod +x gradlew
           ./gradlew clean
           ./gradlew bundleRelease -Pkeystore.password=${{ secrets.KEYSTORE_PASSWORD }}
-        working-directory: telon-gateway-app
+        working-directory: ${{ github.workspace }}/telon-gateway-app
 
   download_bundle:
     runs-on: ubuntu-latest
-
     needs: build_android
 
     steps:
@@ -115,9 +116,8 @@ jobs:
       - name: Download Android App Bundle
         run: |
           mkdir -p $GITHUB_WORKSPACE/dist
-          # Исправленный путь: сборка находится в telon-gateway-app/android/...
-          cp $GITHUB_WORKSPACE/telon-gateway-app/android/app/build/outputs/bundle/release/app-release.aab $GITHUB_WORKSPACE/dist
-        working-directory: telon-gateway-app
+          # Путь к .aab внутри telon-gateway-app
+          cp $GITHUB_WORKSPACE/telon-gateway-app/android/app/build/outputs/bundle/release/app-release.aab $GITHUB_WORKSPACE/dist || (echo "AAB not found. Listing build outputs:" && ls -la $GITHUB_WORKSPACE/telon-gateway-app/android/app/build/outputs || true)
 
       - name: Archive Bundle
         uses: actions/upload-artifact@v4
